--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Nutrition Tracker</a>
+        <a class="navbar-brand" href="#">Grocer Guru</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -281,7 +281,7 @@
         </style>
         
         <div class="main-content">
-            <h2>Discover the Secrets in Your Shopping Bag!</h2>
+            <h2>Get nutritional overview of your Shopping Bag!</h2>
             <p>Curious about what you're really eating? Let's dive into your grocery habits together!</p>
             
             <div class="step">
@@ -299,7 +299,7 @@
                 <p>Done! Check out your personalized dashboard. It’s packed with insights about your purchases—from calories to carbs. Start making informed choices today!</p>
             </div>
         
-            <p class="cta">Ready to get started? Upload your receipt now and take the first step towards a healthier lifestyle!</p>
+            <!-- <p class="cta">Ready to get started? Upload your receipt now and take the first step towards a healthier lifestyle!</p> -->
         </div>
         
         <style>
