majot chnages, remove local storage, pdf handeling

--- a/templates/about.html
+++ b/templates/about.html
@@ -88,7 +88,7 @@
         <hr>
 
         <h2 class="section-title">Database</h2>
-        <p>At the core of Grocer Guru is our nutritioanl information database, built from over 35 hours of dedicated scraping efforts. This robust database encompasses of more than 15,000 products available at Kroger, each cataloged with precise nutritional values. I plan to open source this database to help others build cool applications.</p>
+        <p>At the core of Grocer Guru is our nutritional information database, built from over 35 hours of dedicated scraping efforts. This robust database encompasses of more than 15,000 products available at Kroger, each cataloged with precise nutritional values. I plan to open source this database to help others build cool applications.</p>
         
         <hr>
 
@@ -106,7 +106,7 @@
         </div>
         <hr>
         <h2 class="section-title">Open for Collaboration</h2>
-        <p>Grocer Guru is committed to expanding its reach and utility. If you are interested in integrating Grocer Guru's capabilities into your platform or have a proposal for cooperation, please reach out to us. Together, we can empower more consumers to make healthier choices.</p>
+        <p>Grocer Guru is committed to expanding its reach and utility. If you are interested in integrating Grocer Guru's capabilities into your platform or have a proposal for cooperation, please reach out. Together, we can empower more consumers to make healthier choices.</p>
         
         
     </div>
