--- a/templates/chartjs-example.html
+++ b/templates/chartjs-example.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
             </ul>
         </div>
