minor chnages in ui

--- a/templates/home.html
+++ b/templates/home.html
@@ -168,7 +168,7 @@
         
         <div class="sidebar">
             <h3><i class="fas fa-file-upload"></i> Upload Your Receipt</h3>
-            <p>Start your journey towards a healthier diet by uploading your grocery receipt here:</p>
+            <p>Start your journey towards a healthier diet by uploading your Kroger receipt here:</p>
             <form action="/submit" method="post" enctype="multipart/form-data">
                 <div class="file-upload-wrapper">
                     <input type="file" name="file" id="file-upload" accept=".pdf" onchange="handleFileUpload()" />
@@ -319,7 +319,7 @@
             <p>Curious about what you're really eating? Let's dive into your grocery habits together!</p>
             
             <div class="step">
-                <h3><i class="fas fa-upload"></i> Step 1: Upload Your Receipt</h3>
+                <h3><i class="fas fa-upload"></i> Upload Your  Kroger Receipt</h3>
                 <p>Got your receipt? Great! Just upload it here. Our tool currenlty supports receipts from Kroger mobile app.</p>
             </div>
             
